add login to swagger
